Fix extra padding under nav item when hovered on (#96)

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -219,7 +219,7 @@ h2 .fa {padding-right: 10px;}
 }
 
 .logo {
-    width: 170px;
+    width: 160px;
     height: auto;
     display: block;
 }
